Linguagem/yacc.y
%{
#include "functions.h"

#define YYSTYPE attributes

using namespace std;

struct attributes{

    string label;
    string type;
    string temp;
    string attributions;
    string translate;
    string sentence;
};

int yylex(void);
void yyerror(string);

%}

%token TK_START TK_END
%token TK_TYPE TK_DYNAMIC_TYPE TK_NUMBER TK_NUMBER_TYPE TK_ID
%token TK_REAL TK_CHAR TK_BOOL
%token TK_OR TK_AND TK_NOT
%token TK_RELAT TK_NOT_EQUALS_RELAT TK_EQUALS_RELAT
%token TK_PLUS_EQUAL TK_MINUS_EQUAL TK_MULTIPLIES_EQUAL TK_DIVIDES_EQUAL

%start S

%left '+' '-'
%left '*' '/' '%'
%left '^'
%left '(' ')'

%%

S           : TK_START BLOCK
            {
                cout << "/*Cry me a Ocean*/\n" << "#include <iostream>\n#include<string.h>\n#include<stdio.h>\nint main(void)\n{\n" << $2.attributions << "\n---- FIM DAS ATRIBUIÇÕES ----\n \n"<< $2.translate <<"\n \treturn 0;\n}" << endl;
            }
            ;

BLOCK       : ':' COMMANDS TK_END '\n'
            {
                $$.attributions = $2.attributions;
                $$.translate = $2.translate;
            }
            ;

COMMANDS    : COMMAND COMMANDS
            {
                $$.attributions = $1.attributions + $2.attributions;
                $$.translate = $1.translate + $2.translate;
            }
            |
            {
                $$.attributions = "";
                $$.translate = "";
            }
            ;

COMMAND     : EXP '\n'
            {
                $$.type = $1.type;
                $$.attributions = $1.attributions;
                $$.translate = $1.translate;
            }
            | ATTR '\n'
            {
                $$.attributions = $1.attributions;
                $$.translate = $1.translate;
            }
            | '\n'
            {
                $$.attributions = "";
                $$.translate = "";
            }
            ;

ATTR        : TK_TYPE TK_ID
            {
                $$.type = $1.translate;
                $$.temp = set_variable($2.label, $1.translate);
                $$.attributions = '\t' + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = "";
            }
            | TK_NUMBER TK_ID
            {
                $$.type = get_type($1.translate);
                $$.temp = set_variable($2.label, $$.type);
                $$.attributions = '\t' + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = "";
            }
            | TK_TYPE TK_ID '=' EXP
            {
                $$.type = $1.translate;
                $$.temp = set_variable($2.label, $1.translate);
                $$.attributions = $4.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = $4.translate + '\t' + $$.temp + " = " + $4.temp + ";\n";
            }
            | TK_NUMBER TK_ID '=' EXP
            {
                $$.type = get_type($1.translate);
                $$.temp = set_variable($2.label, $1.translate);
                $$.attributions = $4.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = $4.translate + '\t' + $$.temp + " = " + $4.temp + ";\n";
            }
            | TK_ID '=' EXP
            {
                $$.type = get_variable($1.label).type;
                $$.temp = get_variable($1.label).tmp;
                $$.attributions = $3.attributions;
                $$.translate = $3.translate + '\t' + $$.temp + " = " + $3.temp + ";\n";
            }
            ;

EXP         : EXP '+' EXP
            {
                $$.type = get_operation_type($1.type, $3.type, "+");
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = $1.attributions + $3.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " + " + $3.temp + ";\n";

            }
            | EXP '-' EXP
            {
                $$.type = get_operation_type($1.type, $3.type, "-");
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = $1.attributions + $3.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " - " + $3.temp + ";\n";
            }
            | EXP '*' EXP
            {
                $$.type = get_operation_type($1.type, $3.type, "*");
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = $1.attributions + $3.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " * " + $3.temp + ";\n";
            }
            | EXP '/' EXP
            {
                $$.type = get_operation_type($1.type, $3.type, "/");
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = $1.attributions + $3.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " / " + $3.temp + ";\n";
            }
            | EXP '%' EXP
            {
                $$.type = get_operation_type($1.type, $3.type, "%");
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = $1.attributions + $3.attributions + "\t" + $$.type + " " + $$.temp + ";\n";
                $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " % " + $3.temp + ";\n";
            }
            | EXP TK_RELAT EXP
            {
              $$.type = "bool";
              $$.temp = set_variable(current_exp(), $$.type);
              $$.attributions = $1.attributions + $3.attributions + "\t" + $$.type + " " + $$.temp + ";\n";
              $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " " + $2.translate + " " + $3.temp + ";\n";
            }
            /*| '|' EXP '|'
            {
                $$.type = get_operation_type($2.type, "-");
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = $2.attributions + "\t" + $$.type + " " + $$.temp + ";\n";
                $$.translate = $2.translate + "\t" + $$.temp + " = " + " | " + $2.temp + " | " + ";\n";
            }*/
            | EXP TK_OR EXP
            {
              $$.type = "bool";
              $$.temp = set_variable(current_exp(), $$.type);
              $$.attributions = $1.attributions + $3.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
              $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " || " + $3.temp + ";\n";
            }
            | EXP TK_AND EXP
            {
              $$.type = "bool";
              $$.temp = set_variable(current_exp(), $$.type);
              $$.attributions = $1.attributions + $3.attributions + "\t" + get_type($$.type) + " " + $$.temp + ";\n";
              $$.translate = $1.translate + $3.translate + "\t" + $$.temp + " = " + $1.temp + " && " + $3.temp + ";\n";
            }
            | TK_REAL
            {
                $$.type = "float64";
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = "\t" + $$.temp +" = " + $1.translate + ";\n";
            }
            | TK_CHAR
            {
                $$.type = "char";
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = "\t" + $$.temp +" = " + $1.translate + ";\n";
            }
            | TK_BOOL
            {
                $$.type = "bool";
                $$.temp = set_variable(current_exp(), $$.type);
                $$.attributions = "\t" + get_type($$.type) + " " + $$.temp + ";\n";
                $$.translate = "\t" + $$.temp +" = " + parse_boolean($1.translate) + ";\n";
            }
            | TK_ID
            {
                $$.type = get_variable($1.label).type;
                $$.temp = get_variable($1.label).tmp;
                $$.attributions = "";
                $$.translate = "";
            }
            ;

%%

#include "lex.yy.c"

int yyparse();

int main(int argc, char* argv[]){

    yyparse();

    return 0;
}

void yyerror(string MSG){
    cout << MSG << endl;
    exit (0);
}
