Linguagem/y.output
Terminals unused in grammar

   TK_DYNAMIC_TYPE
   TK_NUMBER_TYPE
   TK_NOT
   TK_RELAT
   TK_NOT_EQUALS_RELAT
   TK_EQUALS_RELAT
   TK_PLUS_EQUAL
   TK_MINUS_EQUAL
   TK_MULTIPLIES_EQUAL
   TK_DIVIDES_EQUAL
   '^'
   '('
   ')'


State 35 conflicts: 6 shift/reduce
State 36 conflicts: 6 shift/reduce
State 37 conflicts: 2 shift/reduce
State 38 conflicts: 2 shift/reduce
State 39 conflicts: 2 shift/reduce
State 40 conflicts: 2 shift/reduce


Grammar

    0 $accept: S $end

    1 S: TK_START BLOCK

    2 BLOCK: ':' COMMANDS TK_END '\n'

    3 COMMANDS: COMMAND COMMANDS
    4         | %empty

    5 COMMAND: EXP '\n'
    6        | ATTR '\n'
    7        | '\n'

    8 ATTR: TK_TYPE TK_ID
    9     | TK_NUMBER TK_ID
   10     | TK_TYPE TK_ID '=' EXP
   11     | TK_NUMBER TK_ID '=' EXP
   12     | TK_ID '=' EXP

   13 EXP: EXP '+' EXP
   14    | EXP '-' EXP
   15    | EXP '*' EXP
   16    | EXP '/' EXP
   17    | EXP TK_OR EXP
   18    | EXP TK_AND EXP
   19    | TK_REAL
   20    | TK_CHAR
   21    | TK_BOOL
   22    | TK_ID


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 2 5 6 7
'(' (40)
')' (41)
'*' (42) 15
'+' (43) 13
'-' (45) 14
'/' (47) 16
':' (58) 2
'=' (61) 10 11 12
'^' (94)
error (256)
TK_START (258) 1
TK_END (259) 2
TK_TYPE (260) 8 10
TK_DYNAMIC_TYPE (261)
TK_NUMBER (262) 9 11
TK_NUMBER_TYPE (263)
TK_ID (264) 8 9 10 11 12 22
TK_REAL (265) 19
TK_CHAR (266) 20
TK_BOOL (267) 21
TK_OR (268) 17
TK_AND (269) 18
TK_NOT (270)
TK_RELAT (271)
TK_NOT_EQUALS_RELAT (272)
TK_EQUALS_RELAT (273)
TK_PLUS_EQUAL (274)
TK_MINUS_EQUAL (275)
TK_MULTIPLIES_EQUAL (276)
TK_DIVIDES_EQUAL (277)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
S (34)
    on left: 1, on right: 0
BLOCK (35)
    on left: 2, on right: 1
COMMANDS (36)
    on left: 3 4, on right: 2 3
COMMAND (37)
    on left: 5 6 7, on right: 3
ATTR (38)
    on left: 8 9 10 11 12, on right: 6
EXP (39)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 5 10 11 12 13
    14 15 16 17 18


State 0

    0 $accept: . S $end

    TK_START  shift, and go to state 1

    S  go to state 2


State 1

    1 S: TK_START . BLOCK

    ':'  shift, and go to state 3

    BLOCK  go to state 4


State 2

    0 $accept: S . $end

    $end  shift, and go to state 5


State 3

    2 BLOCK: ':' . COMMANDS TK_END '\n'

    TK_TYPE    shift, and go to state 6
    TK_NUMBER  shift, and go to state 7
    TK_ID      shift, and go to state 8
    TK_REAL    shift, and go to state 9
    TK_CHAR    shift, and go to state 10
    TK_BOOL    shift, and go to state 11
    '\n'       shift, and go to state 12

    $default  reduce using rule 4 (COMMANDS)

    COMMANDS  go to state 13
    COMMAND   go to state 14
    ATTR      go to state 15
    EXP       go to state 16


State 4

    1 S: TK_START BLOCK .

    $default  reduce using rule 1 (S)


State 5

    0 $accept: S $end .

    $default  accept


State 6

    8 ATTR: TK_TYPE . TK_ID
   10     | TK_TYPE . TK_ID '=' EXP

    TK_ID  shift, and go to state 17


State 7

    9 ATTR: TK_NUMBER . TK_ID
   11     | TK_NUMBER . TK_ID '=' EXP

    TK_ID  shift, and go to state 18


State 8

   12 ATTR: TK_ID . '=' EXP
   22 EXP: TK_ID .

    '='  shift, and go to state 19

    $default  reduce using rule 22 (EXP)


State 9

   19 EXP: TK_REAL .

    $default  reduce using rule 19 (EXP)


State 10

   20 EXP: TK_CHAR .

    $default  reduce using rule 20 (EXP)


State 11

   21 EXP: TK_BOOL .

    $default  reduce using rule 21 (EXP)


State 12

    7 COMMAND: '\n' .

    $default  reduce using rule 7 (COMMAND)


State 13

    2 BLOCK: ':' COMMANDS . TK_END '\n'

    TK_END  shift, and go to state 20


State 14

    3 COMMANDS: COMMAND . COMMANDS

    TK_TYPE    shift, and go to state 6
    TK_NUMBER  shift, and go to state 7
    TK_ID      shift, and go to state 8
    TK_REAL    shift, and go to state 9
    TK_CHAR    shift, and go to state 10
    TK_BOOL    shift, and go to state 11
    '\n'       shift, and go to state 12

    $default  reduce using rule 4 (COMMANDS)

    COMMANDS  go to state 21
    COMMAND   go to state 14
    ATTR      go to state 15
    EXP       go to state 16


State 15

    6 COMMAND: ATTR . '\n'

    '\n'  shift, and go to state 22


State 16

    5 COMMAND: EXP . '\n'
   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '+'     shift, and go to state 25
    '-'     shift, and go to state 26
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28
    '\n'    shift, and go to state 29


State 17

    8 ATTR: TK_TYPE TK_ID .
   10     | TK_TYPE TK_ID . '=' EXP

    '='  shift, and go to state 30

    $default  reduce using rule 8 (ATTR)


State 18

    9 ATTR: TK_NUMBER TK_ID .
   11     | TK_NUMBER TK_ID . '=' EXP

    '='  shift, and go to state 31

    $default  reduce using rule 9 (ATTR)


State 19

   12 ATTR: TK_ID '=' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 33


State 20

    2 BLOCK: ':' COMMANDS TK_END . '\n'

    '\n'  shift, and go to state 34


State 21

    3 COMMANDS: COMMAND COMMANDS .

    $default  reduce using rule 3 (COMMANDS)


State 22

    6 COMMAND: ATTR '\n' .

    $default  reduce using rule 6 (COMMAND)


State 23

   17 EXP: EXP TK_OR . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 35


State 24

   18 EXP: EXP TK_AND . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 36


State 25

   13 EXP: EXP '+' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 37


State 26

   14 EXP: EXP '-' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 38


State 27

   15 EXP: EXP '*' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 39


State 28

   16 EXP: EXP '/' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 40


State 29

    5 COMMAND: EXP '\n' .

    $default  reduce using rule 5 (COMMAND)


State 30

   10 ATTR: TK_TYPE TK_ID '=' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 41


State 31

   11 ATTR: TK_NUMBER TK_ID '=' . EXP

    TK_ID    shift, and go to state 32
    TK_REAL  shift, and go to state 9
    TK_CHAR  shift, and go to state 10
    TK_BOOL  shift, and go to state 11

    EXP  go to state 42


State 32

   22 EXP: TK_ID .

    $default  reduce using rule 22 (EXP)


State 33

   12 ATTR: TK_ID '=' EXP .
   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '+'     shift, and go to state 25
    '-'     shift, and go to state 26
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    $default  reduce using rule 12 (ATTR)


State 34

    2 BLOCK: ':' COMMANDS TK_END '\n' .

    $default  reduce using rule 2 (BLOCK)


State 35

   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   17    | EXP TK_OR EXP .
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '+'     shift, and go to state 25
    '-'     shift, and go to state 26
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    TK_OR     [reduce using rule 17 (EXP)]
    TK_AND    [reduce using rule 17 (EXP)]
    '+'       [reduce using rule 17 (EXP)]
    '-'       [reduce using rule 17 (EXP)]
    '*'       [reduce using rule 17 (EXP)]
    '/'       [reduce using rule 17 (EXP)]
    $default  reduce using rule 17 (EXP)


State 36

   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP
   18    | EXP TK_AND EXP .

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '+'     shift, and go to state 25
    '-'     shift, and go to state 26
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    TK_OR     [reduce using rule 18 (EXP)]
    TK_AND    [reduce using rule 18 (EXP)]
    '+'       [reduce using rule 18 (EXP)]
    '-'       [reduce using rule 18 (EXP)]
    '*'       [reduce using rule 18 (EXP)]
    '/'       [reduce using rule 18 (EXP)]
    $default  reduce using rule 18 (EXP)


State 37

   13 EXP: EXP . '+' EXP
   13    | EXP '+' EXP .
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    TK_OR     [reduce using rule 13 (EXP)]
    TK_AND    [reduce using rule 13 (EXP)]
    $default  reduce using rule 13 (EXP)


State 38

   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   14    | EXP '-' EXP .
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    TK_OR     [reduce using rule 14 (EXP)]
    TK_AND    [reduce using rule 14 (EXP)]
    $default  reduce using rule 14 (EXP)


State 39

   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   15    | EXP '*' EXP .
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24

    TK_OR     [reduce using rule 15 (EXP)]
    TK_AND    [reduce using rule 15 (EXP)]
    $default  reduce using rule 15 (EXP)


State 40

   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   16    | EXP '/' EXP .
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24

    TK_OR     [reduce using rule 16 (EXP)]
    TK_AND    [reduce using rule 16 (EXP)]
    $default  reduce using rule 16 (EXP)


State 41

   10 ATTR: TK_TYPE TK_ID '=' EXP .
   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '+'     shift, and go to state 25
    '-'     shift, and go to state 26
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    $default  reduce using rule 10 (ATTR)


State 42

   11 ATTR: TK_NUMBER TK_ID '=' EXP .
   13 EXP: EXP . '+' EXP
   14    | EXP . '-' EXP
   15    | EXP . '*' EXP
   16    | EXP . '/' EXP
   17    | EXP . TK_OR EXP
   18    | EXP . TK_AND EXP

    TK_OR   shift, and go to state 23
    TK_AND  shift, and go to state 24
    '+'     shift, and go to state 25
    '-'     shift, and go to state 26
    '*'     shift, and go to state 27
    '/'     shift, and go to state 28

    $default  reduce using rule 11 (ATTR)
